--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -8,6 +8,8 @@ periodicity:
     label: Répétition par semaine
   days:
     label: Jour(s) de la semaine
+  repeats:
+    title: Répétition(s)
 Today: Aujourd'hui
 menu:
   user:
