--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -173,3 +173,9 @@ page:
   notauthorized: Accès non autorisé
 created:
   at: le
+btn:
+  search: Rechercher
+search:
+  form:
+    word:
+      placeholder: Mot clef
