Type entry for area

--- a/translations/messages+intl-icu.fr.yaml
+++ b/translations/messages+intl-icu.fr.yaml
@@ -182,3 +182,7 @@ search:
 type_area:
   edit:
     title: Association des types pour {name}
+
+entryType:
+  area:
+    flash: Les modifications ont bien été apportées
